syntax = "proto3";

option java_package = "com.codenotfound.grpc.lib";
// option java_multiple_files = true;
// package com.codenotfound.grpc.helloworld;

message Person {
  string first_name = 1;
  string last_name = 2;
}

message Greeting {
  string message = 1;
}

message Sentence {
  string message = 1;
}

//service HelloWorldService {
  //rpc sayHello (Person) returns (Greeting);
  //rpc palindrome (Sentence) returns (Greeting);
//}

// The greeter service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello ( HelloRequest) returns (  HelloReply) {}
    rpc getPalindrome ( HelloRequest) returns (  HelloReply) {}

}
// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}
// The response message containing the greetings
message HelloReply {
    string message = 1;
}
